Fixed nav header bug on small screens

--- a/AussieBuilt/staticfiles/AussieBuilt/template.css
+++ b/AussieBuilt/staticfiles/AussieBuilt/template.css
@@ -454,6 +454,8 @@ a {
     #nav-header {
         font-size: 18px;
         width: 221px;
+        line-height: 20px;
+        max-height: 40px;
     }
 
     #nav-logo {
